set _displayText to return empty array instead of string when no truncation is needed

--- a/addon/templates/components/line-clamp.hbs
+++ b/addon/templates/components/line-clamp.hbs
@@ -14,7 +14,7 @@
     <span class="lt-line-clamp__line">{{unbound line.text}}</span>
   {{/if}}
 {{else}}
-  {{_displayText}}
+  {{text}}
 {{/each}}
 
 {{#if showLessButton}}
