--- a/app/styles/ember-line-clamp.css
+++ b/app/styles/ember-line-clamp.css
@@ -18,6 +18,8 @@
 
 .lt-line-clamp--multi-line {
   display: -webkit-box;
+  /*! autoprefixer: off */
   -webkit-box-orient: vertical;
+  /*! autoprefixer: on */
   text-overflow: ellipsis;
 }
