--- a/addon/templates/components/line-clamp.hbs
+++ b/addon/templates/components/line-clamp.hbs
@@ -3,7 +3,8 @@
     <span class="lt-line-clamp__line lt-line-clamp__line--last">
       {{unbound line.text}}
       {{~#if line.needsEllipsis~}}
-        <span class="lt-line-clamp__ellipsis">{{unbound ellipsis}}
+        <span class="lt-line-clamp__ellipsis"><div class="lt-line-clamp__dummy-element">{{unbound ellipsis}}</div>
+        {{!-- Use div to wrap the ellipsis up so that the see more button can work after google translates the page (Issue #48)--}}
           {{#if _showMoreButton}}
             <a data-test-line-clamp-show-more-button="true" href="#" role="button" id="line-clamp-show-more-button" aria-expanded="false" class="lt-line-clamp__more" onclick={{action "toggleTruncate"}}>{{unbound seeMoreText}}</a>
           {{/if}}
